<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pbbackground2">

    <Button
        android:id="@+id/signoutBtn"
        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
        android:layout_width="123dp"
        android:layout_height="51dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#FF9800"
        android:fontFamily="@font/bangers"
        android:text="Sign Out"
        android:textColor="#000000"
        android:textSize="16sp"
        app:cornerRadius="25px"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="219dp"
        android:layout_height="86dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="125dp"
        android:fontFamily="@font/bangers"
        android:shadowColor="#000000"
        android:shadowRadius="20"
        android:text="ACCOUNT"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="128dp"
        android:layout_height="42dp"
        android:fontFamily="@font/bangers"
        android:shadowColor="#000000"
        android:shadowRadius="10"
        android:text="USERNAME"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/textView12"
        app:layout_constraintStart_toStartOf="@+id/textView12"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="111dp"
        android:layout_height="42dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/bangers"
        android:shadowColor="#000000"
        android:shadowRadius="10"
        android:text="PASSWORD"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/usernameVal"
        app:layout_constraintStart_toStartOf="@+id/usernameVal"
        app:layout_constraintTop_toBottomOf="@+id/usernameVal" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="131dp"
        android:layout_height="82dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/bangers"
        android:shadowColor="#000000"
        android:shadowRadius="20"
        android:text="STATS"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="172dp"
        android:layout_height="40dp"
        android:layout_marginTop="0dp"
        android:fontFamily="@font/bangers"
        android:shadowColor="#000000"
        android:shadowRadius="10"
        android:text="WINS/LOSSES"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/textView8"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/winLossVal"
        android:layout_width="152dp"
        android:layout_height="33dp"
        android:fontFamily="@font/bangers"
        android:shadowColor="#000000"
        android:shadowRadius="10"
        android:textAlignment="center"
        android:textColor="#D3D3D3"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/textView13"
        app:layout_constraintStart_toStartOf="@+id/textView13"
        app:layout_constraintTop_toBottomOf="@+id/textView13"
        tools:text="val" />

    <TextView
        android:id="@+id/usernameVal"
        android:layout_width="112dp"
        android:layout_height="34dp"
        android:fontFamily="@font/bangers"
        android:shadowColor="#000000"
        android:shadowRadius="10"
        android:textAlignment="center"
        android:textColor="#D3D3D3"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/textView15"
        app:layout_constraintStart_toStartOf="@+id/textView15"
        app:layout_constraintTop_toBottomOf="@+id/textView15"
        tools:text="val" />

    <TextView
        android:id="@+id/passwordVal"
        android:layout_width="101dp"
        android:layout_height="37dp"
        android:fontFamily="@font/bangers"
        android:shadowColor="#000000"
        android:shadowRadius="10"
        android:textAlignment="center"
        android:textColor="#D3D3D3"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/textView16"
        app:layout_constraintStart_toStartOf="@+id/textView16"
        app:layout_constraintTop_toBottomOf="@+id/textView16"
        tools:text="val" />

    <Button
        android:id="@+id/backBtn"
        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#FFEB3B"
        android:fontFamily="@font/bangers"
        android:text="Back"
        android:textColor="#000000"
        android:textSize="16sp"
        app:cornerRadius="25px"
        app:icon="?attr/actionModeCloseDrawable"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/changePasswordBtn"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="153dp"
        android:layout_height="49dp"
        android:fontFamily="@font/bangers"
        android:text="Change Password"
        android:textColor="#FFEB3B"
        android:textSize="16sp"
        app:iconTint="#FFEB3B"
        app:layout_constraintEnd_toEndOf="@+id/passwordVal"
        app:layout_constraintStart_toStartOf="@+id/passwordVal"
        app:layout_constraintTop_toBottomOf="@+id/passwordVal" />

    <Button
        android:id="@+id/leagueBtn"
        android:layout_width="123dp"
        android:layout_height="52dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#FFEB3B"
        android:fontFamily="@font/bangers"
        android:text="View League"
        android:textColor="#000000"
        android:textSize="16sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/leagueTitle"
        app:layout_constraintStart_toStartOf="@+id/leagueTitle"
        app:layout_constraintTop_toBottomOf="@+id/leagueTitle" />

    <TextView
        android:id="@+id/leagueTitle"
        android:layout_width="126dp"
        android:layout_height="39dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/bangers"
        android:shadowColor="#000000"
        android:shadowRadius="10"
        android:text="LEAGUE"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/winLossVal"
        app:layout_constraintStart_toStartOf="@+id/winLossVal"
        app:layout_constraintTop_toBottomOf="@+id/winLossVal" />
</androidx.constraintlayout.widget.ConstraintLayout>