<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pbbackground2"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/backBtn"
        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton.Icon"
        android:layout_width="114dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#FFEB3B"
        android:fontFamily="@font/bangers"
        android:text="Back"
        android:textSize="14sp"
        app:cornerRadius="25px"
        app:icon="?attr/homeAsUpIndicator"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rippleColor="#FF5722"
        app:strokeColor="#FF5722" />

    <Button
        android:id="@+id/singleplayerBtn"
        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="52dp"
        android:backgroundTint="#FFEB3B"
        android:fontFamily="@font/bangers"
        android:text="Singleplayer"
        android:textSize="16sp"
        app:cornerRadius="25px"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectGameTitle" />

    <TextView
        android:id="@+id/selectGameTitle"
        android:layout_width="409dp"
        android:layout_height="104dp"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/bangers"
        android:shadowColor="#000000"
        android:shadowRadius="20"
        android:text="Select Game Mode"
        android:textColor="#FFFFFF"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/multiplayerBtn"
        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="#FFEB3B"
        android:fontFamily="@font/bangers"
        android:text="Multiplayer"
        android:textSize="16sp"
        app:cornerRadius="25px"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/singleplayerBtn" />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/bangers"
        android:shadowColor="#000000"
        android:shadowRadius="10"
        android:text=""
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/profilePicture"
        android:layout_width="48dp"
        android:layout_height="46dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toStartOf="@+id/username"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/empty" />

    <Button
        android:id="@+id/chatBtn"
        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#1ADDDD"
        android:fontFamily="@font/bangers"
        android:text="Chat"
        android:textSize="16sp"
        app:cornerRadius="25px"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>