...
        android:shadowRadius="10"
        android:text="Username"
        android:textAlignment="center"
        android:textColor="#FFEB3B"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/usernameInput"
        app:layout_constraintTop_toBottomOf="@+id/leagueId" />

    <ListView
        android:id="@+id/memberList"
        android:layout_width="269dp"
        android:layout_height="348dp"
        android:layout_marginStart="1dp"
...
